--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
        </div>
        
        <div class="service-buttons">
-           <a class="nav-btn" href="">Buyirtma berish</a>
+           <a class="nav-btn " href="#order_service">Buyirtma berish</a>
            <a  class="service-link" href="">Xizmatlar sahifasiga o'tish</a>
        </div>
 
@@ -173,7 +173,7 @@
      </div>
  </section>
 
- <section>
+ <section id="order_service">
     <div class="service-form">
    <div class="container">
     <div class="service-info-form">
