--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
       </div>
   </header>
 
- <section class="second-header">
-    <div class="container">
+ <section class="second-header" >
+         <div class="container">
         <div class="main-text">
             <h2 class="main-title">Biznesingizni keyingi bosqichga olib chiqing</h2>
             <p class="main-caption">Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam facilisis lacinia ex, eget sollicitudin massa pellentesque in. Vivamus mattis eros at sem pulvinar</p>
@@ -195,13 +195,17 @@
  </section>
 
  <footer class="site-footer">
+
     
      <div class="container">
         <div class="ft-bg">
          <div class="about-site">
-             <h2 class="about-title">Copyright 2020</h2>
-             <p class="about-text">Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam facilisis lacinia ex, eget sollicitudin massa pellentesque in. Vivamus mattis eros at sem pulvinar tincidunt.</p>
-         </div>
+             <h2 class="about-title">Info Contact</h2>
+             <p class="about-text">Jl. Ir. H. Juanda 3 No. 17-19, 
+                RT.008/RW.002, Kel. Kebon 
+                Kelapa Kec. Gambir, Jakarta 
+                Pusat 10120</p>
+                <p class="about-text">customer.care@zendit.com</p>
          <div class="footer-navigation">
              <ul class="footer-navlist">
                  <li class="footer-nav-item">
@@ -248,6 +252,7 @@
         </div>
      </div>
     </div>
+    <img src="images/footer" alt="">
  </footer>
 </body>
 </html>
